force-app/main/default/objects/Product2/fields/AM_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Model__c</fullName>
    <inlineHelpText>Enter Car Model</inlineHelpText>
    <label>AM Vehicle Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AM_Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Wagon R</fullName>
            </value>
            <value>
                <fullName>Swift</fullName>
            </value>
            <value>
                <fullName>Estilo</fullName>
            </value>
            <value>
                <fullName>SX4</fullName>
            </value>
            <value>
                <fullName>Swift Dzire</fullName>
            </value>
            <value>
                <fullName>A-Star</fullName>
            </value>
            <value>
                <fullName>Alto 800</fullName>
            </value>
            <value>
                <fullName>Eeco</fullName>
            </value>
            <value>
                <fullName>Ritz</fullName>
            </value>
            <value>
                <fullName>Baleno</fullName>
            </value>
            <value>
                <fullName>Ciaz</fullName>
            </value>
            <value>
                <fullName>Vitara Brezza</fullName>
            </value>
            <value>
                <fullName>i20</fullName>
            </value>
            <value>
                <fullName>EON</fullName>
            </value>
            <value>
                <fullName>i10</fullName>
            </value>
            <value>
                <fullName>Santro</fullName>
            </value>
            <value>
                <fullName>Verna</fullName>
            </value>
            <value>
                <fullName>Getz</fullName>
            </value>
            <value>
                <fullName>Allent</fullName>
            </value>
            <value>
                <fullName>Crena</fullName>
            </value>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>Grand i10</fullName>
            </value>
            <value>
                <fullName>Polo</fullName>
            </value>
            <value>
                <fullName>Indigo</fullName>
            </value>
            <value>
                <fullName>Manza</fullName>
            </value>
            <value>
                <fullName>Vista</fullName>
            </value>
            <value>
                <fullName>Nexon</fullName>
            </value>
            <value>
                <fullName>Harrier</fullName>
            </value>
            <value>
                <fullName>Altroz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>