force-app/main/default/objects/Product2/fields/AM_Vehicle_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Owner_Type__c</fullName>
    <label>AM Vehicle Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>IT Employee</fullName>
            </value>
            <value>
                <fullName>Business Man</fullName>
            </value>
            <value>
                <fullName>Bank Employee</fullName>
            </value>
            <value>
                <fullName>Actor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>