force-app/main/default/objects/Product2/fields/AM_Vehicle_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Registration_Date__c</fullName>
    <label>AM Vehicle Registration Date</label>
    <type>Date</type>
</CustomField>