force-app/main/default/objects/Product2/fields/AM_Vehicle_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Registration_Number__c</fullName>
    <displayFormat>VEH-{0000}</displayFormat>
    <label>AM Vehicle Identification Number</label>
    <type>AutoNumber</type>
</CustomField>