force-app/main/default/objects/Product2/fields/AM_Vehicle_Renew__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Vehicle Renew</label>
    <type>Checkbox</type>
</CustomField>