force-app/main/default/objects/Product2/fields/AM_Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Status__c</fullName>
    <label>AM Vehicle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Dealer-Location</fullName>
                <label>Dealer Location</label>
            </value>
            <value>
                <fullName>In-Service</fullName>
                <label>In Service</label>
            </value>
            <value>
                <fullName>In-Repair</fullName>
                <label>In Repair</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Renew Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>