force-app/main/default/objects/Product2/fields/AM_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Type__c</fullName>
    <formula>IF( RecordType.Name = &apos;AM Dealer Type&apos; ,&apos;Dealer&apos; ,&apos;Customer&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle Type</label>
    <type>Text</type>
</CustomField>