force-app/main/default/objects/Product2/fields/AM_Vehicle_Width__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Width__c</fullName>
    <label>AM Vehicle Width</label>
    <length>5</length>
    <type>Text</type>
</CustomField>