force-app/main/default/objects/Product2/fields/FinalAmount_beforeProfit__c.field-meta.xml
<CustomField>
    <fullName>FinalAmount_beforeProfit__c</fullName>
    <formula>AM_Purchase_Amount__c  + AM_Fuel_Cost__c  +   AM_Repair_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FinalAmount(beforeProfit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>