force-app/main/default/objects/Product2/fields/isSelected__c.field-meta.xml
<CustomField>
    <fullName>isSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSelected</label>
    <type>Checkbox</type>
</CustomField>