force-app/main/default/objects/Product2/fields/KMS_Travelled__c.field-meta.xml
<CustomField>
    <fullName>KMS_Travelled__c</fullName>
    <label>KMS Travelled</label>
    <length>20</length>
    <type>Text</type>
</CustomField>