force-app/main/default/objects/Product2/recordTypes/AM_Dealer_Type.recordType-meta.xml
<RecordType>
    <fullName>AM_Dealer_Type</fullName>
    <active>true</active>
    <label>AM Dealer Type</label>
</RecordType>