force-app/main/default/objects/Product2/recordTypes/AM_Owner_Type.recordType-meta.xml
<RecordType>
    <fullName>AM_Owner_Type</fullName>
    <active>true</active>
    <label>AM Owner Type</label>
</RecordType>