force-app/main/default/objects/Product2/validationRules/Aadhar_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_Number</fullName>
    <active>false</active>
    <description>Aadhar Number Format (eg:1234 5678 9865)</description>
    <errorConditionFormula>NOT( REGEX( AM_Owner_Adhar_Number__c,&quot;^[0-9]{4}\\s[0-9]{4}\\s[0-9]{4}&quot;) )</errorConditionFormula>
    <errorDisplayField>AM_Owner_Adhar_Number__c</errorDisplayField>
    <errorMessage>Aadhar Number Format (eg:1234 5678 9865)</errorMessage>
</ValidationRule>