force-app/main/default/objects/Product2/validationRules/Vehicle_Chassis_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Vehicle_Chassis_No</fullName>
    <active>false</active>
    <description>Vehicle Chassis Number should be 17 Digits.</description>
    <errorConditionFormula>NOT( REGEX( AM_Chassis_Number__c,&quot;^[A-Z0-9]{17}&quot;) )</errorConditionFormula>
    <errorDisplayField>AM_Chassis_Number__c</errorDisplayField>
    <errorMessage>Vehicle Chassis Number should be 17 Digits.</errorMessage>
</ValidationRule>