force-app/main/default/objects/Product2/validationRules/Vehicle_Engine_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Vehicle_Engine_No</fullName>
    <active>false</active>
    <description>Vehicle Engine Number should be 17 Digits.</description>
    <errorConditionFormula>NOT( REGEX( AM_Engine_Number__c,&quot;^[A-Z0-9]{17}&quot;) )</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>Vehicle Engine Number should be 17 Digits.</errorMessage>
</ValidationRule>