force-app/main/default/objects/Product2/validationRules/Vehicle_Registration_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Vehicle_Registration_No</fullName>
    <active>false</active>
    <description>Vehicle Registration Number should be in This Format(eg:TS08FF5678)</description>
    <errorConditionFormula>NOT( REGEX( Name, &quot;^[A-Z]{2}[0-9]{2}[A-Z]{2}[0-9]{4}&quot;) )</errorConditionFormula>
    <errorDisplayField>IsActive</errorDisplayField>
    <errorMessage>Vehicle Registration No should be in This Format(eg:TS08FF5678)</errorMessage>
</ValidationRule>